--- a/compass/base/_base.scss
+++ b/compass/base/_base.scss
@@ -98,7 +98,7 @@ body {
 	font-family: $adelle;
 	font-size: $base-font-size;
 	line-height: $base-line-height;
-	// background-color: $color-background;
+	background-color: $color-background;
 	color: $color-text;
 }
 
@@ -131,7 +131,7 @@ h1 {
 	}
 }
 
-h2 {
+h2, h3 {
 	font-weight: 300;
 	letter-spacing: 3px;
 	margin: 0.5em 0;
@@ -141,12 +141,17 @@ h2 {
 }
 
 h3 {
-	color: $color-heading;
-	font-size: 1.5em;
-	margin: 0 0 0.5em 0;
-	font-weight: 300;
-	line-height: 1;
+	font-size: 1em;
+	letter-spacing: 2px;
 }
+
+// h3 {
+// 	color: $color-heading;
+// 	font-size: 1.5em;
+// 	margin: 0 0 0.5em 0;
+// 	font-weight: 300;
+// 	line-height: 1;
+// }
 
 p {
 	margin-bottom: $base-font-size + $base-line-height;
@@ -158,6 +163,10 @@ ul {
 
 li {
 	// font-weight: 400;
+}
+
+section {
+	background: $white;
 }
 
 // =================================
@@ -289,13 +298,94 @@ footer {
 }
 // =================================
 // =================================
+// == HOME VINAIGRETTE LIST (5)
+// =================================
+// =================================
+
+.section-vinaigrettes {
+
+}
+
+.vin-list {
+	@include clear;
+	margin: 0;
+	padding: 0;
+	border-top: 1px solid $brown;
+	// border-right: 1px solid $brown;
+	li {
+		position: relative;
+		list-style: none;
+		overflow: hidden;
+		border-left: 1px solid $brown;
+		border-bottom: 1px solid $brown;
+		width: 20%;
+		float: left;
+		a {
+			text-decoration: none;
+			display: block;
+			color: inherit;
+		}
+		img {
+			display: block;
+		}
+	}
+}
+
+.vin-list-content {
+	display: block;
+	text-align: center;
+	// padding: 25px;
+	@extend %layer;
+	img {
+		margin: 0 auto;
+	}
+	.vin-bottle {
+		margin-top: 20px;
+	}
+}
+
+.vin-list-name {
+	@extend %layer;
+	@extend %spacing;
+	text-align: center;
+	font-weight: 100;
+}
+
+.vin-list-used {
+	@extend %spacing;
+	@extend %layer-bottom;
+	text-align: center;
+	font-weight: 100;
+}
+
+.vin-list-thumbnail {
+	@extend %layer;
+	@include background-size(25% auto);
+	background: {
+		repeat: no-repeat;
+		position: center center;
+	}
+}
+
+.bottle-image {
+	width: 50%;
+	float: left;
+	@include opacity(0.3);
+	background: $green url(../img/bottle.svg) scroll no-repeat center center;
+	@include background-size(50% auto);
+
+}
+.post-vinaigrettes {
+	.content-ingredients {
+		margin-top: $unit;
+	}
+}
+
+// =================================
+// =================================
 // == HOME SALAD LIST
 // =================================
 // =================================
-
-.section-salads {
-
-}
 
 .salad {
 	background-color: $black;
