--- a/compass/base/_base.scss
+++ b/compass/base/_base.scss
@@ -1,8 +1,3 @@
-.mockup {
-	opacity:0.8;width:100%;position:fixed;top:0;z-index:1000;text-align:center;
-	display: none;
-}
-
 @import "compass";
 @import "breakpoint";
 @import "utilities/mixins";
@@ -15,7 +10,6 @@
 
 $white: #FFF;
 $black: #000000;
-// $dark-green: #34450E;
 $green: darken(#B8CE47,5);
 $medium-green: lighten($green,10);
 $dark-green: darken($green,30);
@@ -27,6 +21,16 @@ $light-blue: #CAE2D8;
 $light-red: #F1644A;
 $burnt-orange: #9D542A;
 $brown: darken(#784F37,20);
+
+$small: 0px 512px;
+$medium: 0px 1024px;
+$large: 0px 1280px;
+
+// =================================
+// =================================
+// == CONFIG
+// =================================
+// =================================
 
 $color-background: $brown;
 $color-text: $brown;
@@ -133,11 +137,14 @@ h1 {
 
 h2, h3 {
 	font-weight: 300;
-	letter-spacing: 3px;
 	margin: 0.5em 0;
 	line-height: 1;
-	font-size: 1.75em;
 	color: $burnt-orange;
+}
+
+h2 {
+	font-size: 1.75em;
+	letter-spacing: 3px;
 }
 
 h3 {
@@ -145,13 +152,15 @@ h3 {
 	letter-spacing: 2px;
 }
 
-// h3 {
-// 	color: $color-heading;
-// 	font-size: 1.5em;
-// 	margin: 0 0 0.5em 0;
-// 	font-weight: 300;
-// 	line-height: 1;
-// }
+@include breakpoint($small) {
+	h2 {
+		font-size: 1em;
+		letter-spacing: 2px;
+	}
+	h3 {
+		font-size: 0.875em;
+	}
+}
 
 p {
 	margin-bottom: $base-font-size + $base-line-height;
@@ -189,7 +198,25 @@ header {
 	@extend %spacing;
 	background-color: $color-header-background;
 	width: 100%;
-	// border-bottom: $border-width solid $brown;
+	@include breakpoint($small) {
+		display: none;
+		padding: 15px 15px 0 15px;
+	}
+}
+
+.section-menu {
+	display: none;
+	a {
+		display: block;
+		text-align: center;
+		background-color: $brown;
+		padding:5px;
+		color: $white;
+		font-size: 20px;
+	}
+	@include breakpoint($small) {
+		display: block;
+	}
 }
 
 // =================================
@@ -223,6 +250,12 @@ header {
 			}
 		}
 	}
+	@include breakpoint($small) {
+		li {
+			display: block;
+			padding: 5px;
+		}
+	}
 }
 
 // =================================
@@ -247,7 +280,7 @@ header {
 
 .hero-content {
 	text-align: center;
-	padding-top: 40px;
+	padding: 40px $unit 20px $unit;
 	@include clear;
 	width: 100%;
 	min-height: 230px;
@@ -415,6 +448,17 @@ footer {
 		img {
 			display: block;
 		}
+
+	}
+	@include breakpoint($medium) {
+		li {
+			width: 50%;
+		}
+	}
+	@include breakpoint($small) {
+		li {
+			width: 100%;
+		}
 	}
 }
 
@@ -422,7 +466,7 @@ footer {
 	text-decoration: none;
 	display: block;
 	color: inherit;
-	&:hover {
+	.no-touch &:hover {
 		.salad-list-thumbnail {
 			@include background-size(125% auto);
 			@include opacity(0.5);
@@ -477,6 +521,11 @@ footer {
 			vertical-align: middle;
 		}
 	}
+	@include breakpoint($small) {
+		.circle {
+			// font-size: 1.25em;
+		}
+	}
 }
 
 .salad-list-content {
@@ -487,7 +536,9 @@ footer {
 	z-index: 10;
 	color: $white;
 	@include opacity(0);
-	// opacity: 0;
+	.no-touch & {
+		@include opacity(1);
+	}
 }
 
 .salad-list-date {
@@ -495,6 +546,10 @@ footer {
 	@extend %spacing;
 	text-align: center;
 	font-weight: 100;
+	.touch & span {
+		padding: 5px;
+		background-color: $brown;
+	}
 }
 
 .salad-list-ingredients {
@@ -502,6 +557,10 @@ footer {
 	@extend %layer-bottom;
 	text-align: center;
 	font-weight: 100;
+	.touch & span {
+		padding: 5px;
+		background-color: $brown;
+	}
 }
 
 .salad-list-thumbnail {
@@ -542,11 +601,18 @@ footer {
 	h2 {
 		text-align: center;
 	}
+	@include breakpoint($small) {
+		width: 100%;
+		padding: 0px $unit;
+	}
 }
 
 .salad-photo {
 	width: 50%;
 	float: left;
+	@include breakpoint($small) {
+		width: 100%;
+	}
 }
 
 .ingredients {
@@ -560,6 +626,13 @@ footer {
 	li {
 		border-bottom: 1px solid rgba($black,0.25);
 		padding: 5px 0;
+	}
+	@include breakpoint($small) {
+		width: 100%;
+		padding: $unit;
+		ul {
+			padding: 0;
+		}
 	}
 }
 
