--- a/compass/base/_base.scss
+++ b/compass/base/_base.scss
@@ -337,11 +337,7 @@ header {
 .salad-hero {
 	max-width: 750px;
 	margin: 0 auto;
-	h2 {
-		text-align: left;
-		margin-left: 180px;
-		padding-top: 90px;
-	}
+	padding-bottom: 20px;
 }
 
 .content-share {
@@ -574,10 +570,10 @@ footer {
 		}
 	}
 	&.as-heading {
-		width: auto;
+		// width: auto;
 		margin-top: 30px;
 		position: static;
-		float: left;
+		// float: left;
 		display: block;
 		.circle {
 			border-color: $green;
@@ -659,6 +655,15 @@ footer {
 		font-weight: normal;
 		font-size: 5em;
 		color: $light-red;
+	}
+	h3 {
+		font-weight: 600;
+		margin: 0.5em 0;
+		line-height: 1;
+		text-align: center;
+		font-size: 1.5em;
+		letter-spacing: 1px;
+		text-transform: none;
 	}
 }
 
