--- a/css/main.css
+++ b/css/main.css
@@ -452,11 +452,7 @@ header {
 .salad-hero {
   max-width: 750px;
   margin: 0 auto;
-}
-.salad-hero h2 {
-  text-align: left;
-  margin-left: 180px;
-  padding-top: 90px;
+  padding-bottom: 20px;
 }
 
 .content-share {
@@ -687,10 +683,8 @@ footer {
   vertical-align: middle;
 }
 .salad-list-number.as-heading {
-  width: auto;
   margin-top: 30px;
   position: static;
-  float: left;
   display: block;
 }
 .salad-list-number.as-heading .circle {
@@ -760,6 +754,15 @@ footer {
   font-weight: normal;
   font-size: 5em;
   color: #f1644a;
+}
+.section-content h3 {
+  font-weight: 600;
+  margin: 0.5em 0;
+  line-height: 1;
+  text-align: center;
+  font-size: 1.5em;
+  letter-spacing: 1px;
+  text-transform: none;
 }
 
 .ingredients-header {
