adds content intro

--- a/compass/base/_base.scss
+++ b/compass/base/_base.scss
@@ -734,7 +734,7 @@ footer {
 	padding-bottom: 20px;
 }
 
-.content-recipe {
+.content-recipe, .content-intro {
 	max-width: 550px;
 	margin: 0 auto;
 	h2 {
