--- a/compass/base/_base.scss
+++ b/compass/base/_base.scss
@@ -272,6 +272,13 @@ header {
 	}
 }
 
+.nav-social-links {
+	font-size: 125%;
+	a {
+		@include inline-block;
+		padding: 0 5px;
+	}
+}
 
 .date {
 	font-size: 0.875em;
