--- a/css/main.css
+++ b/css/main.css
@@ -515,6 +515,12 @@ footer:after {
 footer a {
   color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
+  display: inline-block;
+  vertical-align: middle;
+  *vertical-align: auto;
+  *zoom: 1;
+  *display: inline;
+  margin: 0 5px;
 }
 
 .vin-list {
